fixing tile layout so date doesnt spill over into another line

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -632,7 +632,7 @@ table.times
     font-weight: bold
     text-align: right
     // width: 60px
-    padding: 0 7px
+    padding: 0 6px
 
 header.index
   +clearfix
